[package]
name = "lsr-nf"
version = "0.1.0"
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The ls -R command with Nerd Fonts icons and indentation"
readme = "README.md"
homepage = "https://github.com/maverik-io"
repository = "https://github.com/maverik-io/lsr-rust"
keywords = ["cli", "ls", "nerd-fonts", "icons"]
categories = ["command-line-utilities"]

[dependencies]
termsize = "0.1.8"
